@@ -49,37 +49,39 @@
                     "label": "PNG or JPG",
                     "extension": "png or jpg (*.png;*.jpg)|*.png;*.jpg",
                     "empty_message": "Drop a file here!",
+                    "default": "test.txt",
                     "add_quotes": true
                 },
                 {
                     "type": "folder",
-                    "label": "Some folder path",
+                    "label": "Folder path",
                     "empty_message": "Drop a folder here!",
+                    "default": "testdir",
                     "add_quotes": true
                 },
                 {
                     "type": "check",
-                    "label": "checkbox",
+                    "label": "Checkbox",
                     "value": "flag!",
                     "default": true
                 },
                 {
                     "type": "choice",
-                    "label": "combo box",
+                    "label": "Combo box",
                     "items": ["item1", "item2", "item3"],
                     "values": ["value1", "value2", "value3"],
                     "default": 2
                 },
                 {
                     "type": "check_array",
-                    "label": "options",
+                    "label": "Options",
                     "items": ["item1", "item2", "item3", "item4"],
                     "values": ["falg1", "falg2", "falg3", "flag4"],
                     "default": [false, false, true, false]
                 },
                 {
                     "type": "text_box",
-                    "label": "text box",
+                    "label": "Text box",
                     "empty_message": "type here!",
                     "default": "remove this text!"
                 }
